x1462 block processing into proviasette should set medium to OCT